--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
         <div class="swiper mySwiper banner-slider">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="./images/banner1.svg" class="md" alt="" />
-              <img src="./images/banner1-sm.svg" class="sm" alt="" />
+              <img src="./images/banner1.png" class="md" alt="" />
+              <img src="./images/banner1-sm.png" class="sm" alt="" />
             </div>
             <div class="swiper-slide">
-              <img src="./images/banner2.svg" class="md" alt="" />
-              <img src="./images/banner2-sm.svg" class="sm" alt="" />
+              <img src="./images/banner2.png" class="md" alt="" />
+              <img src="./images/banner2-sm.png" class="sm" alt="" />
             </div>
           </div>
           <div class="swiper-button-next"></div>
@@ -134,7 +134,7 @@
               <div class="info-left">
                 <div class="info-item">
                   <span>
-                    <img src="./images/info-item-img1.svg" alt="" />
+                    <img src="./images/info-item-img1.png" alt="" />
                   </span>
                   <div>
                     <strong>97%</strong>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="info-item">
                   <span>
-                    <img src="./images/info-item-img2.svg" alt="" />
+                    <img src="./images/info-item-img2.png" alt="" />
                   </span>
                   <div>
                     <strong>2000+</strong>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="info-item">
                   <span>
-                    <img src="./images/info-item-img3.svg" alt="" />
+                    <img src="./images/info-item-img3.png" alt="" />
                   </span>
                   <div>
                     <strong>11+</strong>
@@ -161,7 +161,7 @@
                 </div>
               </div>
               <div class="info-right">
-                <img src="./images/infor-banner.svg" alt="" />
+                <img src="./images/infor-banner.png" alt="" />
               </div>
             </div>
           </div>
@@ -324,12 +324,12 @@
               /></a>
             </div>
             <div class="library-image">
-              <img src="./images/lib-img1.svg" alt="" />
-              <img src="./images/lib-img2.svg" alt="" />
-              <img src="./images/lib-img3.svg" alt="" />
-              <img src="./images/lib-img4.svg" alt="" />
-              <img src="./images/lib-img5.svg" alt="" />
-              <img src="./images/lib-img6.svg" alt="" />
+              <img src="./images/lib-img1.png" alt="" />
+              <img src="./images/lib-img2.png" alt="" />
+              <img src="./images/lib-img3.png" alt="" />
+              <img src="./images/lib-img4.png" alt="" />
+              <img src="./images/lib-img5.png" alt="" />
+              <img src="./images/lib-img6.png" alt="" />
             </div>
           </div>
         </div>
