fix section ttnb & doi tac

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                     <img src="./images/info-item-img1.png" alt="" />
                   </span>
                   <div>
-                    <strong>97%</strong>
-                    <p>Sinh viên có việc làm</p>
+                    <strong>25 năm</strong>
+                    <p>Kinh nghiệm lĩnh vực đào tạo</p>
                   </div>
                 </div>
                 <div class="info-item">
@@ -146,8 +146,8 @@
                     <img src="./images/info-item-img2.png" alt="" />
                   </span>
                   <div>
-                    <strong>2000+</strong>
-                    <p>Doanh nghiệp đối tác</p>
+                    <strong>70% <br class="md"> thực hành</strong>
+                    <p>Không học đại cương</p>
                   </div>
                 </div>
                 <div class="info-item">
@@ -155,7 +155,7 @@
                     <img src="./images/info-item-img3.png" alt="" />
                   </span>
                   <div>
-                    <strong>2+</strong>
+                    <strong>02</strong>
                     <p>Cơ sở trên toàn quốc</p>
                   </div>
                 </div>
@@ -345,33 +345,74 @@
               <div class="swiper mySwiper partnerSlider">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="./images/cyient-logo-vector 1.svg" alt="" />
-                    <img src="./images/image 103.svg" alt="" />
-                    <img src="./images/image 104.svg" alt="" />
-                    <img src="./images/image 105.svg" alt="" />
-                    <img src="./images/image 106.svg" alt="" />
-                    <img src="./images/image 107.svg" alt="" />
-                    <img src="./images/image 119.svg" alt="" />
-                    <img src="./images/image 109.svg" alt="" />
-                    <img src="./images/image 110.svg" alt="" />
-                    <img src="./images/image 111.svg" alt="" />
-                    <img src="./images/image 112.svg" alt="" />
-                    <img src="./images/image 113.svg" alt="" />
+                    <img src="./images/brand-img1.png" alt="">
+                    <img src="./images/brand-img2.png" alt="">
+                    <img src="./images/brand-img3.png" alt="">
+                    <img src="./images/brand-img4.png" alt="">
+                    <img src="./images/brand-img5.png" alt="">
+                    <img src="./images/brand-img6.png" alt="">
+                    <img src="./images/brand-img7.png" alt="">
+                    <img src="./images/brand-img8.png" alt="">
+                    <img src="./images/brand-img9.png" alt="">
+                    <img src="./images/brand-img10.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="./images/cyient-logo-vector 1.svg" alt="" />
-                    <img src="./images/image 103.svg" alt="" />
-                    <img src="./images/image 104.svg" alt="" />
-                    <img src="./images/image 105.svg" alt="" />
-                    <img src="./images/image 106.svg" alt="" />
-                    <img src="./images/image 107.svg" alt="" />
-                    <img src="./images/image 119.svg" alt="" />
-                    <img src="./images/image 109.svg" alt="" />
-                    <img src="./images/image 110.svg" alt="" />
-                    <img src="./images/image 111.svg" alt="" />
-                    <img src="./images/image 112.svg" alt="" />
-                    <img src="./images/image 113.svg" alt="" />
+                    <img src="./images/brand-img11.png" alt="">
+                    <img src="./images/brand-img12.png" alt="">
+                    <img src="./images/brand-img13.png" alt="">
+                    <img src="./images/brand-img14.png" alt="">
+                    <img src="./images/brand-img15.png" alt="">
+                    <img src="./images/brand-img16.png" alt="">
+                    <img src="./images/brand-img17.png" alt="">
+                    <img src="./images/brand-img18.png" alt="">
+                    <img src="./images/brand-img19.png" alt="">
+                    <img src="./images/brand-img20.png" alt="">
                   </div>
+                  <div class="swiper-slide">
+                    <img src="./images/brand-img21.png" alt="">
+                    <img src="./images/brand-img22.png" alt="">
+                    <img src="./images/brand-img24.png" alt="">
+                    <img src="./images/brand-img25.png" alt="">
+                    <img src="./images/brand-img26.png" alt="">
+                    <img src="./images/brand-img27.png" alt="">
+                    <img src="./images/brand-img28.png" alt="">
+                    <img src="./images/brand-img29.png" alt="">
+                    <img src="./images/brand-img30.png" alt="">
+                    <img src="./images/brand-img31.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./images/brand-img32.png" alt="">
+                    <img src="./images/brand-img33.png" alt="">
+                    <img src="./images/brand-img34.png" alt="">
+                    <img src="./images/brand-img35.png" alt="">
+                    <img src="./images/brand-img36.png" alt="">
+                    <img src="./images/brand-img37.png" alt="">
+                    <img src="./images/brand-img38.png" alt="">
+                    <img src="./images/brand-img39.png" alt="">
+                    <img src="./images/brand-img40.png" alt="">
+                    <img src="./images/brand-img41.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./images/brand-img42.png" alt="">
+                    <img src="./images/brand-img43.png" alt="">
+                    <img src="./images/brand-img44.png" alt="">
+                    <img src="./images/brand-img45.png" alt="">
+                    <img src="./images/brand-img46.png" alt="">
+                    <img src="./images/brand-img47.png" alt="">
+                    <img src="./images/brand-img48.png" alt="">
+                    <img src="./images/brand-img49.png" alt="">
+                    <img src="./images/brand-img50.png" alt="">
+                    <img src="./images/brand-img51.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./images/brand-img52.png" alt="">
+                    <img src="./images/brand-img53.png" alt="">
+                    <img src="./images/brand-img54.png" alt="">
+                    <img src="./images/brand-img55.png" alt="">
+                    <img src="./images/brand-img56.png" alt="">
+                    <img src="./images/brand-img57.png" alt="">
+                  </div>
+                  
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
